release 0.5.0 – Advanced HTML Reporting